# home_workWeb1

./: Dockerfile  pyproject.toml  requirements.txt  setup.py
CODE_CRAFTERS_CORE/: AddressBook.py  FileSorting.py  NoteFeature.py  Record.py  command_list.py  interface.py  interface_note.py  main.py
